Fix mobile spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -187,9 +187,11 @@ body {
   body {
     overflow-x: hidden;
   }
+
   nav {
     background-color: #0e101b;
   }
+
   #footer-nav {
     background-color: inherit;
   }
@@ -200,11 +202,11 @@ body {
     height: 96vh;
     top: 4vh;
     background-color: #0e101b;
-    display: flex;
     flex-direction: column;
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .nav-links li {
     opacity: 0;
@@ -218,6 +220,7 @@ body {
 }
 
 .nav-active {
+  display: flex;
   transform: translateX(0%);
 }
 
@@ -256,45 +259,6 @@ body {
   font-weight: 1000;
   margin-left: 0.5rem;
 }
-
-/* .main-nav ul, */
-/* .footer-nav ul { */
-/* display: flex; */
-/* margin: 0; */
-/* padding: 0; */
-/* list-style: none; */
-/* } */
-
-/* .main-nav a, */
-/* .footer-nav a { */
-/* font-weight: 800; */
-/* color: inherit; */
-/* text-decoration: none; */
-/* padding: 1rem; */
-/* font-size: 16px; */
-/* } */
-
-/* .main-nav a:hover, */
-/* .footer-nav a:hover { */
-/* color: #adadad; */
-/* } */
-
-/* .main-header { */
-/* display: flex; */
-/* justify-content: space-between; */
-/* align-items: center; */
-/* height: 70px; */
-/* } */
-
-/* #footer { */
-/* position: fixed; */
-/* padding-left: 3vw; */
-/* left: 0; */
-/* bottom: 0; */
-/* width: 100%; */
-/* height: 3%; */
-/* background-color: #0e101b; */
-/* } */
 
 .btn {
   color: white;
